@@ -28,3 +28,9 @@ log4j.logger.org.apache.solr.hadoop=INFO
 
 #log4j.logger.org.apache.solr.common.cloud.ClusterStateUtil=DEBUG
 #log4j.logger.org.apache.solr.cloud.OverseerAutoReplicaFailoverThread=DEBUG
+
+#log4j.logger.org.apache.http.impl.conn.PoolingClientConnectionManager=DEBUG
+#log4j.logger.org.apache.http.impl.conn.BasicClientConnectionManager=DEBUG
+#log4j.logger.org.apache.http=DEBUG
+#log4j.logger.org.apache.solr.client.solrj.impl.SolrHttpRequestRetryHandler=DEBUG
+#log4j.logger.org.eclipse.jetty.server=DEBUG
