@@ -24,6 +24,7 @@ import org.apache.http.client.HttpClient;
 import org.apache.http.client.methods.HttpPost;
 import org.apache.http.entity.ContentProducer;
 import org.apache.http.entity.EntityTemplate;
+import org.apache.http.util.EntityUtils;
 import org.apache.solr.client.solrj.ResponseParser;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrRequest;
@@ -46,6 +47,7 @@ import org.slf4j.LoggerFactory;
 import org.slf4j.MDC;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.OutputStream;
 import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
@@ -56,11 +58,8 @@ import java.util.Set;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.locks.Lock;
-import java.util.concurrent.locks.ReentrantLock;
 
 /**
  * ConcurrentUpdateSolrClient buffers all added documents and writes
@@ -196,6 +195,7 @@ public class ConcurrentUpdateSolrClient extends SolrClient {
         HttpPost method = null;
         HttpResponse response = null;
 
+        InputStream rspBody = null;
         try {
           final UpdateRequest updateRequest =
               queue.poll(pollQueueTime, TimeUnit.MILLISECONDS);
@@ -278,6 +278,7 @@ public class ConcurrentUpdateSolrClient extends SolrClient {
           method.addHeader("Content-Type", contentType);
 
           response = client.getHttpClient().execute(method);
+          rspBody = response.getEntity().getContent();
           int statusCode = response.getStatusLine().getStatusCode();
           if (statusCode != HttpStatus.SC_OK) {
             StringBuilder msg = new StringBuilder();
@@ -295,7 +296,7 @@ public class ConcurrentUpdateSolrClient extends SolrClient {
                   encoding = param.getValue();
                 }
               }
-              NamedList<Object> resp = client.parser.processResponse(response.getEntity().getContent(), encoding);
+              NamedList<Object> resp = client.parser.processResponse(rspBody, encoding);
               NamedList<Object> error = (NamedList<Object>) resp.get("error");
               if (error != null) {
                 solrExc.setMetadata((NamedList<String>) error.get("metadata"));
@@ -312,10 +313,10 @@ public class ConcurrentUpdateSolrClient extends SolrClient {
         } finally {
           try {
             if (response != null) {
-              response.getEntity().getContent().close();
+              EntityUtils.consume(response.getEntity());
             }
-          } catch (Exception ex) {
-            log.warn("", ex);
+          } catch (Exception e) {
+            log.error("Error consuming and closing http response stream.", e);
           }
         }
       }
